tests/integration/error_handling/graph_consistency/07_parent_requirement_does_not_exist/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: [DocumentIndex.create] Requirement REQ-002 references parent requirement which doesn't exist: REQ-001.
